--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,7 @@ h1.title {
 #socials {
   display: flex;
   justify-content: center;
+  margin: 1rem auto;
 
   a {
     text-decoration: none;
